# tts_core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tts_core.toml
services/: tts-core-dashboard.service  tts-core.service
src/tts_core/: __init__.py  api.py  client.py  config.py  models.py  server.py  tts_engine.py
src/tts_core/dashboard/: __main__.py  app.py  systemd.py
src/tts_core/dashboard/static/: style.css
src/tts_core/dashboard/templates/: base.html  index.html
src/tts_core/dashboard/templates/partials/: logs.html  services.html  status.html  synthesize.html  synthesize_result.html
